syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.sfm.grpc";
option java_outer_classname = "UserServiceProto";

service UserService {
  rpc GetUserById (UserRequest) returns (UserResponse);
}

message UserRequest {
  int32 user_id = 1;
}

message UserResponse {
  int32 user_id = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
}